exports[`test should render a DummpTestApp container with a DummtTestEngine failed 1`] = `
<InjectIntl(DummpTestAppView)
  isFailed={true} />
`;

exports[`test should render a DummpTestAppContainer with DummtTestEngine loading 1`] = `<InjectIntl(DummpTestAppView) />`;

exports[`test should render a DummpTestAppContainer with a nonpopulated DummpTestApp 1`] = `<InjectIntl(DummpTestAppView) />`;

exports[`test should render a DummpTestAppContainer with a populated DummpTestApp 1`] = `
<InjectIntl(DummpTestAppView)
  text="DummpTestApp" />
`;
